update file structure

--- a/emo_nbs/01_modelAPI.ipynb
+++ b/emo_nbs/01_modelAPI.ipynb
@@ -566,7 +566,6 @@
    },
    "outputs": [],
    "source": [
-    "# export\n",
     "# from https://github.com/digantamisra98/Mish/blob/b5f006660ac0b4c46e2c6958ad0301d7f9c59651/Mish/Torch/mish.py\n",
     "@torch.jit.script\n",
     "def mish(input):\n",
@@ -595,9 +594,7 @@
    },
    "outputs": [],
    "source": [
-    "# export\n",
     "class EmoModel(nn.Module):\n",
-    "    import torch.nn as nn\n",
     "    def __init__(self, base_model, n_classes, base_model_output_size=768, dropout=0.05):\n",
     "        super().__init__()\n",
     "        self.base_model = base_model\n",
@@ -3058,6 +3055,71 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export \n",
+    "# necessary evil\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "# from https://github.com/digantamisra98/Mish/blob/b5f006660ac0b4c46e2c6958ad0301d7f9c59651/Mish/Torch/mish.py\n",
+    "@torch.jit.script\n",
+    "def mish(input):\n",
+    "    return input * torch.tanh(F.softplus(input))\n",
+    "\n",
+    "class Mish(nn.Module):\n",
+    "    def forward(self, input):\n",
+    "        return mish(input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "class EmoModel(nn.Module):\n",
+    "    def __init__(self, base_model, n_classes, base_model_output_size=768, dropout=0.05):\n",
+    "        super().__init__()\n",
+    "        self.base_model = base_model\n",
+    "\n",
+    "        self.classifier = nn.Sequential(\n",
+    "            nn.Dropout(dropout),\n",
+    "            nn.Linear(base_model_output_size, base_model_output_size),\n",
+    "            Mish(),\n",
+    "            nn.Dropout(dropout),\n",
+    "            nn.Linear(base_model_output_size, n_classes)\n",
+    "        )\n",
+    "\n",
+    "        for layer in self.classifier:\n",
+    "            if isinstance(layer, nn.Linear):\n",
+    "                layer.weight.data.normal_(mean=0.0, std=0.02)\n",
+    "                if layer.bias is not None:\n",
+    "                    layer.bias.data.zero_()\n",
+    "\n",
+    "    def forward(self, input_, *args):\n",
+    "        X, attention_mask = input_\n",
+    "        hidden_states = self.base_model(X, attention_mask=attention_mask)\n",
+    "        # customize here\n",
+    "        # use the <s> representation\n",
+    "        return self.classifier(hidden_states[0][:, 0, :])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3108,7 +3170,6 @@
     "    if pretrained == False:\n",
     "        return model\n",
     "\n",
-    "    import torch\n",
     "    checkpoint = torch.load(PATH)\n",
     "\n",
     "    if inference_only:\n",
@@ -3141,7 +3202,6 @@
    "source": [
     "# export\n",
     "# save the pretrained token\n",
-    "\"\"\" NOT TESTED!\"\"\"\n",
     "def load_tokenizer():\n",
     "    from tokenizers import AutoTokenizer\n",
     "    tokenizer = AutoTokenizer.from_pretrained('distilroberta-base')\n",
@@ -3174,7 +3234,33 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#export\n",
+    "def print_emotion(output):\n",
+    "    # output = model.forward(input)\n",
+    "    idx = torch.argmax(output, dim=1)\n",
+    "    from EMO_AI.model_api import label2int\n",
+    "    for key in label2int:\n",
+    "        if label2int[key] == idx:\n",
+    "            print(\"Emotion: %s\" % key)\n",
+    "            break\n",
+    "    return key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def call_model(text, model_path, inference_only=True):\n",
+    "    model = get_model(model_path, inference_only=inference_only)\n",
+    "    from EMO_AI.data_process import get_tokenizer\n",
+    "    get_tokenizer()\n",
+    "    output = model.forward(convert_text_to_tensor(text))\n",
+    "    return output"
+   ]
   }
  ],
  "metadata": {
