--- a/emo_nbs/DEMO.ipynb
+++ b/emo_nbs/DEMO.ipynb
@@ -12,22 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading: 100%|██████████| 480/480 [00:00<00:00, 162kB/s]\n",
-      "Downloading: 100%|██████████| 878k/878k [00:01<00:00, 545kB/s]  \n",
-      "Downloading: 100%|██████████| 446k/446k [00:00<00:00, 511kB/s] \n",
-      "Downloading: 100%|██████████| 1.29M/1.29M [00:02<00:00, 560kB/s] \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from EMO_AI.model import *"
+    "from EMO_AI.model_api import *\n",
+    "from EMO_AI.data_process import *"
    ]
   },
   {
@@ -38,8 +28,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### get the pretrained model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,78 +45,143 @@
      "text": [
       "c:\\Users\\Kelvin\\anaconda3\\envs\\AI_sheng\\lib\\site-packages\\transformers\\models\\auto\\modeling_auto.py:973: FutureWarning: The class `AutoModelWithLMHead` is deprecated and will be removed in a future version. Please use `AutoModelForCausalLM` for causal language models, `AutoModelForMaskedLM` for masked language models and `AutoModelForSeq2SeqLM` for encoder-decoder models.\n",
       "  FutureWarning,\n",
-      "Downloading: 100%|██████████| 316M/316M [03:44<00:00, 1.48MB/s]   \n",
       "c:\\Users\\Kelvin\\anaconda3\\envs\\AI_sheng\\lib\\site-packages\\transformers\\optimization.py:310: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
       "  FutureWarning,\n"
      ]
     }
    ],
    "source": [
-    "PATH = \"C:\"+chr(92)+\"Users\"+chr(92)+\"Kelvin\"+chr(92)+\"Desktop\"+chr(92)+\"ai_sheng\"+chr(92)+\"emo_0.pt\" # change this\n",
-    "model = get_pretrained_model(PATH, inference_only=False)\n",
+    "# change this\n",
+    "PATH = \"C:\"+chr(92)+\"Users\"+chr(92)+\"Kelvin\"+chr(92)+\"Desktop\"+chr(92)+\"ai_sheng\"+chr(92)+\"emo_0.pt\"\n",
+    "model = get_model(PATH, inference_only=False)\n",
     "\n",
     "# model's architecture should be print\n",
     "# because of model.eval() (used in the function)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### see if run inference (forward pass) works"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "# from 01 nb\n",
+    "# from 01 notebook\n",
     "t = \"Elvis is the king of rock\"\n",
-    "enc = tokenizer.encode_plus(t)\n",
-    "token_representations = base_model(torch.tensor(enc[\"input_ids\"]).unsqueeze(0))[0][0]\n",
-    "print(enc[\"input_ids\"])\n",
-    "print(tokenizer.decode(enc[\"input_ids\"]))\n",
-    "print(f\"Length: {len(enc['input_ids'])}\")\n",
-    "print(token_representations.shape)\n",
-    "\"\"\""
+    "# idk what happened\n",
+    "setup_tokenizer()\n",
+    "tokenizer = get_tokenizer()\n",
+    "rep = model(convert_text_to_tensor(t))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.1518,  1.4839, -1.5390,  0.5634,  1.1406, -0.9670]],\n",
+       "       grad_fn=<AddmmBackward0>)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# related to tokenizer class\n",
-    "inputs = \"I feel good, you know that I want\"\n",
-    "parsed_input = parse_input(inputs) # not write yet\n",
-    "print(parsed_input)"
+    "# it works !\n",
+    "rep"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### let's transform the output from tensor to string\n",
+    "#### aka, print the emotion (string) as well"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "output = model.forward(parsed_input)\n",
-    "output # should be a matrix"
+    "import torch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1])\n",
+      "Emotion: joy\n"
+     ]
+    }
+   ],
    "source": [
-    "# not write yet as well\n",
-    "parsed_output = parse_output(output)\n",
-    "parsed_output"
+    "# first, change the output to the label\n",
+    "out = torch.argmax(rep, dim=1)\n",
+    "print(out)\n",
+    "\n",
+    "# get from the label2int map\n",
+    "from EMO_AI.model_api import label2int\n",
+    "\n",
+    "for key in label2int:\n",
+    "    if label2int[key] == out:\n",
+    "        print(\"Emotion: %s\" % key)\n",
+    "        break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Emotion: joy\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'joy'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "plot_emotion(parsed_output)"
+    "def print_emotion(output):\n",
+    "    # output = model.forward(input)\n",
+    "    idx = torch.argmax(output, dim=1)\n",
+    "    from EMO_AI.model_api import label2int\n",
+    "    for key in label2int:\n",
+    "        if label2int[key] == idx:\n",
+    "            print(\"Emotion: %s\" % key)\n",
+    "            break\n",
+    "    return key\n",
+    "\n",
+    "print_emotion(rep)"
    ]
   },
   {
@@ -131,12 +193,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Elvis is the king of rock'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.3208,  1.0827, -1.8061,  0.9746,  1.3354, -0.8285]],\n",
+       "       grad_fn=<AddmmBackward0>)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from EMO_AI.model_api import *\n",
+    "call_model(t, PATH, False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# output has been parsed\n",
     "output = call_model(input_string, PATH)\n",
+    "# not written yet\n",
     "plot_emotion(output)"
    ]
   }
