--- a/emo_nbs/02_data_process.ipynb
+++ b/emo_nbs/02_data_process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,10 +106,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F"
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +375,7 @@
        ")"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +450,7 @@
        "Encoding(num_tokens=512, attributes=[ids, type_ids, tokens, offsets, attention_mask, special_tokens_mask, overflowing])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +483,7 @@
        "Encoding(num_tokens=512, attributes=[ids, type_ids, tokens, offsets, attention_mask, special_tokens_mask, overflowing])"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +503,7 @@
        "512"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +523,7 @@
        "Tokenizer(vocabulary_size=50265, model=ByteLevelBPE, add_prefix_space=False, lowercase=False, dropout=None, unicode_normalizer=None, continuing_subword_prefix=None, end_of_word_suffix=None, trim_offsets=False)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,16 +554,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.0495, -0.1497,  0.0263, -0.2447,  0.0460, -0.0809]])"
+       "tensor([[-0.0937,  0.0017, -0.0608, -0.0633,  0.0188, -0.0855]])"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +601,7 @@
        "('<s>Elvis is the king of rock</s><pa', 2547)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,9 +628,18 @@
     "def get_tokenizer(max_tokens=512):\n",
     "    from tokenizers import ByteLevelBPETokenizer\n",
     "    from tokenizers.processors import BertProcessing\n",
+    "    # add error checking\n",
+    "    voc_file = \"tokenizer/vocab.json\"\n",
+    "    merg_file = \"tokenizer/merges.txt\"\n",
+    "\n",
+    "    import os.path\n",
+    "    if not os.path.isfile(voc_file) or not os.path.isfile(merg_file):\n",
+    "        from EMO_AI.model_api import setup_tokenizer\n",
+    "        setup_tokenizer()\n",
+    "           \n",
     "    t = ByteLevelBPETokenizer(\n",
-    "        \"tokenizer/vocab.json\",\n",
-    "        \"tokenizer/merges.txt\"\n",
+    "        voc_file,\n",
+    "        merg_file\n",
     "    )\n",
     "    t._tokenizer.post_processor = BertProcessing(\n",
     "        (\"</s>\", t.token_to_id(\"</s>\")),\n",
@@ -642,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +677,7 @@
        "'Elvis is the king of rock'"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,14 +688,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.0495, -0.1497,  0.0263, -0.2447,  0.0460, -0.0809]])\n"
+      "tensor([[-0.0937,  0.0017, -0.0608, -0.0633,  0.0188, -0.0855]])\n"
      ]
     }
    ],
@@ -706,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,14 +736,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.0489, -0.1419,  0.0396, -0.2335,  0.0389, -0.0817]])\n"
+      "tensor([[-0.0900,  0.0021, -0.0561, -0.0747,  0.0262, -0.0774]])\n"
      ]
     }
    ],
@@ -749,12 +759,104 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Do prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([4])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# this is the output\n",
+    "# label are from 1 to 6\n",
+    "out = torch.argmax(repp, dim=1)\n",
+    "out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values([0, 1, 2, 3, 4, 5])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "label2int.values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fear tensor([4])\n",
+      "{'sadness': 0, 'joy': 1, 'love': 2, 'anger': 3, 'fear': 4, 'surprise': 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in label2int:\n",
+    "    if label2int[key] == out:\n",
+    "        print(key, out)\n",
+    "print(label2int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "stop here, below not working",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_20432\\9370053.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[1;36m1\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"stop here, below not working\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m: stop here, below not working"
+     ]
+    }
+   ],
+   "source": [
+    "assert 1 == 0, \"stop here, below not working\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### integrate w/ dataloader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
