tmp fix get_model

--- a/emo_nbs/01_modelAPI.ipynb
+++ b/emo_nbs/01_modelAPI.ipynb
@@ -100,12 +100,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#export\n",
-    "def get_model(PATH, pretrained=True, inference_only=True, lr=0.0001, default_model=None):\n",
+    "def get_model(PATH=\".pt\", pretrained=True, inference_only=True, lr=0.0001, default_model=None):\n",
     "    if PATH[-3:] != \".pt\" and PATH[-4:] != \".pth\":\n",
     "        print(\"Unable to load pretrained model\")\n",
     "        return None\n",
@@ -142,6 +142,54 @@
     "        model.train()\n",
     "\n",
     "    return model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### temporarily fix get_model() to allow customed random model (not pretrained)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from EMO_AI.data_process import convert_text_to_tensor\n",
+    "from EMO_AI.model_api import mish, Mish, EmoModel, get_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Kelvin\\anaconda3\\envs\\AI_sheng\\lib\\site-packages\\transformers\\models\\auto\\modeling_auto.py:973: FutureWarning: The class `AutoModelWithLMHead` is deprecated and will be removed in a future version. Please use `AutoModelForCausalLM` for causal language models, `AutoModelForMaskedLM` for masked language models and `AutoModelForSeq2SeqLM` for encoder-decoder models.\n",
+      "  FutureWarning,\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.0280,  0.1436,  0.1584,  0.0828,  0.0293,  0.0380]],\n",
+       "       grad_fn=<AddmmBackward0>)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = get_model(pretrained=False)\n",
+    "ret = model(convert_text_to_tensor(\"We are the world\"))\n",
+    "ret"
    ]
   },
   {
