--- a/emo_nbs/01_modelAPI.ipynb
+++ b/emo_nbs/01_modelAPI.ipynb
@@ -382,11 +382,135 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### another design of get_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def get_model_exp(PATH=\".pt\", pretrained=True, inference_only=True, lr=0.0001, custom_model=None, custom_optimizer=None):\n",
+    "    def valid_pth(P):\n",
+    "        # .pt\n",
+    "        # length >=3 and .pt: true\n",
+    "        # .pth\n",
+    "        # length >=4 and .pth: true\n",
+    "        N = len(P)\n",
+    "        if N >= 3 and PATH.endswith(\".pt\"):\n",
+    "            return True\n",
+    "        if N >= 4 and PATH.endswith(\".pth\"):\n",
+    "            return True\n",
+    "        return False\n",
+    "    # init globally inside this function\n",
+    "    model = None\n",
+    "    # if no customized model (user defined model) -> load default model arch.\n",
+    "    if custom_model is None:\n",
+    "        from transformers import AutoModelWithLMHead\n",
+    "        model = EmoModel(AutoModelWithLMHead.from_pretrained(\"distilroberta-base\").base_model, 6)\n",
+    "    else:\n",
+    "        model = custom_model\n",
+    "    if not pretrained:\n",
+    "        if inference_only:\n",
+    "            model.eval()\n",
+    "        return model\n",
+    "    if not valid_pth(PATH):\n",
+    "        print(\"model path not valid, return None\")\n",
+    "        return None\n",
+    "    if inference_only:\n",
+    "        model.load_state_dict(PATH)\n",
+    "        model.eval()\n",
+    "    else:\n",
+    "        # if it's customized model -> pretrained -> not inference only-> check if optimizer is None\n",
+    "        import torch\n",
+    "        checkpoint = torch.load(PATH)\n",
+    "        if custom_optimizer:\n",
+    "            optimizer = custom_optimizer\n",
+    "        else:\n",
+    "            from transformers import AdamW\n",
+    "            optimizer = AdamW(model.parameters(), lr=lr)\n",
+    "        model.load_state_dict(checkpoint['model_state_dict'])\n",
+    "        optimizer.load_state_dict(checkpoint['optimizer_state_dict'])\n",
+    "        model.train()\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from EMO_AI.model_api import *\n",
+    "PATH = \"C:\"+chr(92)+\"Users\"+chr(92)+\"Kelvin\"+chr(92)+\"Desktop\"+chr(92)+\"ai_sheng\"+chr(92)+\"emo_0.pt\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Kelvin\\anaconda3\\envs\\AI_sheng\\lib\\site-packages\\transformers\\models\\auto\\modeling_auto.py:973: FutureWarning: The class `AutoModelWithLMHead` is deprecated and will be removed in a future version. Please use `AutoModelForCausalLM` for causal language models, `AutoModelForMaskedLM` for masked language models and `AutoModelForSeq2SeqLM` for encoder-decoder models.\n",
+      "  FutureWarning,\n",
+      "c:\\Users\\Kelvin\\anaconda3\\envs\\AI_sheng\\lib\\site-packages\\transformers\\optimization.py:310: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
+      "  FutureWarning,\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = get_model_exp(PATH, inference_only=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.0745,  0.5299, -1.4448,  2.0631,  0.6728, -1.0502]],\n",
+       "       grad_fn=<AddmmBackward0>)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from EMO_AI.data_process import  convert_text_to_tensor\n",
+    "model(convert_text_to_tensor(\"I try so hard to feed here appetite\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### should we create a notebook for utils?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_model_output(text, model):\n",
+    "    import torch\n",
+    "    with torch.no_grad():\n",
+    "        model.eval()\n",
+    "        return model.forward(text)\n"
+   ]
   }
  ],
  "metadata": {
