--- a/emo_nbs/02_data_process.ipynb
+++ b/emo_nbs/02_data_process.ipynb
@@ -625,6 +625,8 @@
    "outputs": [],
    "source": [
     "#export\n",
+    "from functools import lru_cache\n",
+    "@lru_cache(maxsize=4)\n",
     "def get_tokenizer(max_tokens=512):\n",
     "    from tokenizers import ByteLevelBPETokenizer\n",
     "    from tokenizers.processors import BertProcessing\n",
