--- a/Test_For_Backend.ipynb
+++ b/Test_For_Backend.ipynb
@@ -30,12 +30,12 @@
     "sleep(1)\n",
     "\n",
     "username_box = driver.find_element('id','email')\n",
-    "username_box.send_keys('usr')\n",
+    "username_box.send_keys(usr)\n",
     "print (\"Email Id entered\")\n",
     "sleep(1)\n",
     "\n",
     "password_box = driver.find_element('id','pass')\n",
-    "password_box.send_keys('pwd')\n",
+    "password_box.send_keys(pwd)\n",
     "print (\"Password entered\")\n",
     "\n",
     "login_box = driver.find_element('name','login')\n",
