fetch and write file sort of works

--- a/PLURK/02_fetch_emoji.ipynb
+++ b/PLURK/02_fetch_emoji.ipynb
@@ -1648,6 +1648,254 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "\"file counter, should we use callback?\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"let's make write file a function\"\n",
+    "def write_fetch_result(filename,content, dirname=\"tmp_smile_first/\"):\n",
+    "    from pathlib import Path\n",
+    "    \"save the file\"\n",
+    "    \"check if the folder exist first\"\n",
+    "    if not os.path.isdir(Path(dirname)):\n",
+    "        os.system(\"mkdir %s\" % dirname)\n",
+    "    else:\n",
+    "        print(\"folder exists\")\n",
+    "    \"write content into the file\"\n",
+    "    if not os.path.isfile(Path(dirname+filename)):\n",
+    "        with open(Path(dirname+filename), \"w\") as f:\n",
+    "            cnt = 0\n",
+    "            for ele in content:\n",
+    "                f.write(\"\\n\\nfile #%d\\n\"%(cnt))\n",
+    "                f.write(ele)\n",
+    "                cnt += 1\n",
+    "            f.close()        \n",
+    "    else:\n",
+    "        print(\"is file, skipped\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp_2 = plurk.callAPI('/APP/PlurkSearch/search', options={'query' : '😂','offset':100})\n",
+    "len(tmp_2['plurks'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7/31去了漫博，其實是被玩具創作吸引，結果動漫還是佔大多數，老人完全不認識啊XD 只知道柯南跟鬼滅….噗 \n",
+      "手遊也完全沒興趣，但是去了幻塔看蒼太。我是因為懶得看動漫，國中很愛看漫畫，看畫風就認得老師，現在完全退步。如果看到很喜歡的畫風還是會想買週邊，但前提是要認識的角色😂\n",
+      " https://images.plurk.com/2bm2rqUQPaqZRgMubD4kJW.jpg https://images.plurk.com/3i94vm8DiwHH27sgrdUJcZ.jpg https://images.plurk.com/otIPPLODLVTA3qoSRZN1M.jpg https://images.plurk.com/49fHyrLHFvveiLKnt8cPUk.jpg\n",
+      "https://images.plurk.com/Z0FAdM1ri6iCBpqdfGOpm.jpg \n",
+      "誰😂\n",
+      "[drama]怎麼沒有擦布的絵文字 避開個關鍵字🤣 一開始看劇情簡介蠻無感 但看了兩集好像蠻好看的會想看下去🤣 不用帶腦看的小故事那種感覺(?) 這個時間帯的劇都蠻符合我的喜好😂\n",
+      "感覺身上某些痣的位置大家很羨慕？這世界怎麼了😂\n",
+      ">>鼻頭(側邊)、淚痣、鎖骨下方、中指、手腕\n",
+      "#日常\n",
+      "新世界狂歡 特裝版\n",
+      "\n",
+      "首賣時八大平臺搶不到又無法到現場搶\n",
+      "感謝給力友人好意幫忙找到代購...但多了😂\n",
+      "\n",
+      "套出不拆1600\n",
+      "價格含代購跟寄來的運費、以及平台的手續費($10)\n",
+      "\n",
+      "特地上標，希望購買的滿18\n",
+      "一人限一組，自由心證可直接下標\n",
+      "\n",
+      "https://myship.7-11.com.tw/general/detail/GM2208028204581 (賣場)\n",
+      "\n",
+      "#售 #新世界狂歡 #特裝版\n",
+      "比起極度失落，目前這樣什麼都感受不到也不想反應的狀態更讓我覺得可怕，可能太不熟悉這樣的自己了吧。\n",
+      "\n",
+      "星期六久違的拿了琴酒出來喝，那天晚上睡覺大概每隔兩個小時就會跳心跳數過慢的警告，一直持續到中午睡醒😂\n",
+      "不確定是因為喝酒還是睡太熟導致心跳數過慢。\n",
+      "可能這就是我耗氧比較低的原因吧⋯⋯\n",
+      "抽到保底只有idia😂\n",
+      "不過還好是沒有的卡 [emo315]\n",
+      "1366\n",
+      "OMi 訂閱下去...先試玩一個月看看😂\n",
+      "[emo33] \n",
+      "\n",
+      "好了我又要來剪小廢片了((？\n",
+      "\n",
+      "然後歡迎大家提供自己推講動森語的片段，我好期待可以弄成一分鐘以上的版本w\n",
+      "\n",
+      "也有想給咪百萬訂閱剪個誇誇片，不知道有沒有人有興趣一起挖 vod😂\n",
+      "回歸噗浪，但也是看追蹤居多😂\n",
+      "之前離開噗浪後忘記鎖咖瑪居然沒掉光光嗎[emo10]\n",
+      "嵐嵐多難 😂😂\n",
+      "怎麼連直播連線都朱朱的調出現了 😂😂😂\n",
+      "\n",
+      "https://youtube.com/shorts/O7KTMlZIh7g?feature=share\n",
+      "［全聯］ https://images.plurk.com/4ezGRzsJ03pcaMKFter8c3.jpg https://images.plurk.com/6xjhVHgsMZ4r0lVFMdXqJM.jpg 已經速嗑完一包只剩包裝～干貝米乖乖，每顆造型就弄的像干貝，味道就淡一點的五香口味😂 琴通寧喝起來很像雪碧...\n",
+      "[emo119]分享周邊喜悅\n",
+      "\n",
+      "我不買韓漫的，因為買了我也看不懂那些圈圈跟直線，但是，自從看了爸爸我不想結婚後，看到第三集的封面是爸爸，立刻看賣場、下單、等待😂🤣😂🤣😂🤣\n",
+      "\n",
+      "然後今天就收到爸爸惹🥺🥺🥺\n",
+      "下收精美帥氣然後哭起來盛世美顏的爸爸🥰❤️\n",
+      "（我跟我同事都好愛看爸爸哭🤣😂🤣😂）\n",
+      "\n",
+      "#아빠,나이결혼안할래요! \n",
+      "#爸，這個婚我不結\n",
+      "#爸爸,我不想結婚\n",
+      "#雷吉思弗洛延\n",
+      "【#代購】#新世界狂歡 #台北虎之穴\n",
+      "預計8/13前往，每款每樣角色取正取1位，備取1位\n",
+      "需代墊15%(有金額限制)，不需代墊10%\n",
+      "正取需先付款，備取可取付(如正取不需要才順延至備取，因此備取不一定能購買到，請悉知！)主要是有朋友陪同，但他說需到現場才決定購買哪些😂 \n",
+      "復刻商品增加布儡&啖天，無卡套及杯墊\n",
+      "不幫忙代蓋章><\n",
+      "另外這邊不接受少A不要B><有購買到的會正常出貨，沒購買到的會再匯款退款！\n",
+      "價格以之前的定價收款，多退少補\n",
+      "☆立牌$255\n",
+      "☆吊飾$130\n",
+      "☆明信片組$70\n",
+      "\n",
+      "因是預約下午時段，可會有買不到的風險！請願意接受的伊得們再來詢問，感謝><\n",
+      " https://images.plurk.com/7DGXSVzuolufWPeGTQvYOL.jpg https://images.plurk.com/6uPdUI6THpJWqUsunI61CJ.jpg \n",
+      "好可愛啊😂😂 \n",
+      "www.toy-people.com/?p=73487 (輕鬆成為劇中人物！吉卜力美術館推出《神隱少女》&《紅豬》等服飾商品 | 日刊電電)\n",
+      "不過看幾次壓克力磚，零零是真帥~❤️❤️\n",
+      "(｡･ω･｡)\n",
+      "松田很帥(ㅅ´ ˘ `)♡，柯南可愛(ू•ᴗ•ू❁)\n",
+      " https://images.plurk.com/5swJqTntXVFu7UnN1P2mt0.jpg https://images.plurk.com/jhmU4aldu4zCTeRxOfL4.jpg https://images.plurk.com/3GhUH1H0OpXHVxa33Anvbf.jpg https://images.plurk.com/64wHkBKF8p93H0g4DFapHG.jpg \n",
+      "不過特典卡啊！抽了兩次來的都是風見，所以去尋了一下特典卡，找到最後就剩零零你了....( ´•̥̥̥ω•̥̥̥` )\n",
+      " https://images.plurk.com/5NyoEu4q0XHQOZDhKL6J2p.jpg 最后還多加一個花束風見....\n",
+      "所以現在多兩張花束風見跟一張花束佐藤😂😂\n",
+      " https://images.plurk.com/5K8KN9AfMdWTNPyT9LNOPP.jpg\n",
+      "#柯南#降谷零#安室透#松田陣平\n",
+      "||◤　　　　　◥||\n",
+      "　 Twitter限定\n",
+      "   未公開映像‼\n",
+      "||◣　　　　　◢||\n",
+      "\n",
+      "#亀梨和也(#KATTUN)さんに最近の様子を暴露されてしまった #中丸雄一 さん😂\n",
+      "\n",
+      "お2人の仲の良さが伺えます💗💜\n",
+      "\n",
+      "#ひと目でわかる‼︎\n",
+      "#高嶋ちさ子 #チョコレートプラネット\n",
+      "https://twitter.com/ntv_hitome/status/1554036717845417984\n",
+      "[表情_63]\n",
+      "[emo280]25元四驅車😍先驅音速\n",
+      "https://images.plurk.com/2jn1eeb8GhVFsWb2FVrkQn.jpg 買電子雞順便買的😂 #蝦皮買的\n",
+      "https://images.plurk.com/6MIY46ye6jPbsdRQw1svcy.jpg 😂\n",
+      "3月以來的Qrzone\n",
+      "勝利開場就壞了😂\n",
+      "#Qrzone\n",
+      "https://youtu.be/M3YMOG2lQsA\n",
+      "\n",
+      "巴魯忘了是自己給clear取了會長這個綽號😂\n",
+      "看到ぽこた叫會長，巴魯還很驚訝說原來clear 被叫會長呀🤩\n",
+      "\n",
+      "完完全全忘了自己是那個十年前隨意幫別人取綽號的始作俑者，這才是我認識的巴魯👍\n",
+      "[logo1影集]\n",
+      "https://b23.tv/wd3txWO\n",
+      "我沒次都先在中國平台發現台灣的劇😂\n",
+      "放假💙❤️溫赤☺️ https://images.plurk.com/1SYQOzf65ERdPZgSyW35Bx.jpg\n",
+      "\n",
+      "注意。\n",
+      "不好意思😂樓主身上放貝殻💕\n",
+      "https://images.plurk.com/6wCzgUnFzd59zvGK0FwJEu.jpg\n",
+      "https://youtu.be/uyp7Hjguqk4\n",
+      "https://youtu.be/W-iqvJy2OBI\n",
+      "睽違2年的新歌[emo44]\n",
+      "https://youtu.be/qJ9xqQus9go \n",
+      "10万人おめでとうございます[emo39] \n",
+      "https://youtu.be/01mGUUZw-_I\n",
+      "https://images.plurk.com/4yWx7fuAyoTQeBVS0RAZTh.jpg \n",
+      "這篇真的很靠北 😂 \n",
+      "原直播不管是魔性笑聲還是被爛笑話氣到歸懶趴火都很草(rofl)\n",
+      "https://youtu.be/8RVnn3CxpAo\n",
+      "這是Yugo流教唱法嗎ww\n",
+      "剛好這週末要去日k，可以用這個方法練習？😂😂\n",
+      "[LOL]\n",
+      "沒想到會有這麼好笑的情況\n",
+      "剛剛開歌姬去打電腦野團\n",
+      "遇到**很想很想很想打龍**的隊友\n",
+      "有多想？清完塔後就一直守龍...\n",
+      "大家也沒說話，陪他一起等...等很久...\n",
+      "龍出了...開始打了\n",
+      "打到一半以上，遊戲突然結束...\n",
+      "\n",
+      "因為自家小兵把人家的基地攻破了😂\n",
+      "\n",
+      "傻眼了 [emo111]\n",
+      "https://www.plurk.com/p/oxxlw0\n",
+      "我自己骰到三！明天就有新人要報到！\n",
+      "而且我真的希望她能救我於水火之中！😂\n",
+      "健康狀況最近也開始在意，真的不能再胖下去了！\n",
+      "我看到解析真的只有瞠目結舌而已\n",
+      "#仇夢勿入 因為是從腐轉夢……現在看自己以前的同人作品會有點、微妙\n",
+      "明明是自己寫的東西，卻好像迴力鏢打到自己😂\n",
+      "能腐夢雙修的人真了不起，我有點回不了頭，雖然對於夢角的CP角還是保有友情程度的喜歡，但就是……微妙\n",
+      "去看了花丸才發現是三部曲😂\n",
+      "https://images.plurk.com/12BcH993sZ7EH52vtbTDnH.jpg\n",
+      "才發現週週都有特典跟特映影片😂\n",
+      "--已經是個失格的動漫迷了--\n",
+      "https://twitter.com/seryusiy/status/1553898146526527488?s=21&t=rpmdpytiqbROvF34jsHbaQ \n",
+      "申留真好幼稚😂\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ele in tmp_2['plurks']:\n",
+    "    print(ele['content_raw'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "folder exists\n",
+      "is file, skipped\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"worked\"\n",
+    "write_fetch_result(filename=\"another.json\",content=[ele[\"content_raw\"] for ele in tmp_2['plurks']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
