add comment, considering init as nbdev project

--- a/PLURK/02_fetch_emoji.ipynb
+++ b/PLURK/02_fetch_emoji.ipynb
@@ -10,6 +10,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#default_exp fetch_emoji"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -30,6 +39,7 @@
     }
    ],
    "source": [
+    "#export\n",
     "from acc import *\n",
     "from plurk_oauth import PlurkAPI\n",
     "\n",
@@ -1658,6 +1668,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "\"let's make write file a function\"\n",
     "def write_fetch_result(filename,content, dirname=\"tmp_smile_first/\"):\n",
     "    from pathlib import Path\n",
@@ -1889,6 +1900,130 @@
    "source": [
     "\"worked\"\n",
     "write_fetch_result(filename=\"another.json\",content=[ele[\"content_raw\"] for ele in tmp_2['plurks']])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### process of fetching thousands of posts\n",
+    "#### fetch as much as we can at once (30)\n",
+    "#### -> save to files (e.g, file_1.json)\n",
+    "#### -> repeat last 2 steps until we get the amount we want\n",
+    "#### -> merge the existing files to a big ass file "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Or, we can just append everything to a list and suk it up"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "\"first, make fetch emoji a function as well\"\n",
+    "def fetch_emoji(emoji='',plurk=None):\n",
+    "    if len(emoji) == 0:\n",
+    "        print(\"emoji not inputed, exit\")\n",
+    "        return\n",
+    "    if plurk is None:\n",
+    "        print(\"initialize plurk ...\")\n",
+    "        from acc import acc_info\n",
+    "        from plurk_oauth import PlurkAPI\n",
+    "        # with access token, just run this\n",
+    "        plurk = PlurkAPI(acc_info[\"CONSUMER_KEY\"], acc_info[\"CONSUMER_SECRET\"])\n",
+    "        plurk.authorize(acc_info[\"API_KEY\"], acc_info[\"API_SECRET\"])\n",
+    "    tmp_p = plurk.callAPI('/APP/PlurkSearch/search', options={'query' : emoji,'offset':100})\n",
+    "    # weird edge case exists\n",
+    "    if tmp_p is None:\n",
+    "        return []\n",
+    "    # should we check if key exists?\n",
+    "    return [ele['content_raw'] for ele in tmp_p['plurks'] if ele is not None]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "folder exists\n",
+      "Wall time: 2min 52s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "big_content = []\n",
+    "\" loop thru it\"\n",
+    "\"say, the limit per post is 30, we want 10000 (for example)\"\n",
+    "\"so, we should fetch 334 times\"\n",
+    "\n",
+    "for _ in range(10000//30+1):\n",
+    "    # make this a big list\n",
+    "    # we should add: if fetched list is [] then just break the loop\n",
+    "    big_content += fetch_emoji(emoji='😂',plurk=plurk)\n",
+    "\n",
+    "\"then, write all the content at once\"\n",
+    "write_fetch_result(filename=\"bigass.json\", content=big_content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1020"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(big_content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "another.json\n",
+      "bigass.json\n",
+      "bigass_0.json\n",
+      "bigass_1.json\n",
+      "tmp_smile.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "#export\n",
+    "\"prevent accidently overwrite the existing files\"\n",
+    "def list_out_existing_filenames_of_plurks():\n",
+    "    import os\n",
+    "    source = list(os.walk(\"tmp_smile_first\"))[0][2]\n",
+    "    for ele in source:\n",
+    "        print(ele)\n",
+    "\n",
+    "list_out_existing_filenames_of_plurks()"
    ]
   },
   {
